--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -23,12 +23,35 @@
   background-image: url("/images/switch.png");
 }
 
+.cta_rouned {
+  border-radius: 40px 40px 40px 0px;
+}
+
+[dir="rtl"] .cta_rouned {
+  border-radius: 40px 40px 0px 40px;
+}
+
 @layer components {
   .px_padding {
     @apply xl:px-[80px] lg:px-[50px] md:px-[60px] sm:px-[40px] xs:px-[20px];
   }
 
   /* undeline for the links in the navbar */
+  .subservicesLinks {
+    @apply relative inline-block cursor-pointer;
+  }
+  .subservicesLinks::after {
+    content: "";
+    @apply absolute left-0 w-full h-[2px] bg-white;
+    bottom: -4px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .subservicesLinks:hover::after {
+    transform: scaleX(1);
+  }
   .links {
     @apply relative inline-block;
   }
@@ -56,5 +79,26 @@
     transform: scaleX(1); /* Active state should always show the underline */
     transform-origin: left;
     transition: transform 0.2s ease-in-out;
+  }
+  .card_modal {
+    @apply bg-white rounded-[20px] rounded-tl-[65px] xs:pb-[24px]  xl:w-[500px] lg:w-[500px] md:w-[500px] sm:w-[400px] xs:w-full xl:h-[380px] lg:h-[380px] md:h-[380px] sm:h-auto xs:h-auto relative;
+  }
+  .card_modal_cutout_section {
+    @apply relative xl:h-[133px] lg:h-[133px] md:h-[133px] sm:h-[113px] xs:h-[113px] w-full  rounded-tl-[65px] px-[24px] pt-[24px] flex justify-end overflow-hidden;
+  }
+  [dir="rtl"] .card_modal_cutout_section {
+    @apply justify-start;
+  }
+
+  .cutout-circle {
+    @apply absolute top-[-28px] left-[-28px] xl:w-[160px] xl:h-[160px] lg:w-[160px] lg:h-[160px] md:w-[160px] md:h-[160px] sm:w-[130px] sm:h-[130px] xs:w-[130px] xs:h-[130px] bg-[#D9D9D9]  rounded-full flex items-center justify-center;
+  }
+
+  .cutout-circle::before {
+    content: "";
+    @apply absolute z-30 top-1/2 left-1/2 w-full h-full rounded-full border-[13px] border-[#D9D9D9]  transform -translate-x-1/2 -translate-y-1/2;
+  }
+  .image_circle {
+    @apply absolute top-[-5px] left-[-5px] xl:w-[120px] xl:h-[120px] lg:w-[120px] lg:h-[120px] md:w-[120px] md:h-[120px] sm:w-[90px] sm:h-[90px] xs:w-[90px] xs:h-[90px] bg-white rounded-full z-40 shadow-md flex justify-center items-center;
   }
 }
